--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 eureka.client.serviceUrl.defaultZone= http://localhost:8010/eureka
 eureka.instance.prefer-ip-address=true
+
+spring.config.import=optional:configserver:http://localhost:8012
